tests/cases/control-flow/ok/init-while-true-return.ari
fn main() -> i64 {
  init i = 0 while true {
    return i + 9;
  } next i + 1
}
